fixed pic alignment

--- a/styles/global.css
+++ b/styles/global.css
@@ -477,14 +477,10 @@ p {
 .big-pic {
 	height: 70vh;
 	width: auto;
-	float: right;
-	display: inline;
-	position: sticky;
-	opacity: 0;
-	position: relative;
-	top: 50%;
-	transform: translateY(-50%);
-/*	padding-right: 5%;*/
+	display: inline-flex;
+	position: absolute;
+    right: 0;
+    align-items: center;
 }
 
 #pic-space {
